# Blender_MCP

./: .gitignore  .mcp.json  CLAUDE.md  README.md  pyproject.toml  requirements.txt  run_mcp.cmd  run_mcp.py
.claude/skills/: animate.md  export-asset.md  import-asset.md  model.md  physics.md  psx-asset.md  scene-setup.md  texture.md  uv-unwrap.md
addon/: __init__.py  blender_manifest.toml
src/blender_mcp/: __init__.py  __main__.py  config.py  connection.py  server.py
src/blender_mcp/tools/: __init__.py  animation.py  camera.py  code_exec.py  collections.py  constraints.py  cursor.py  curves.py  import_export.py  lighting.py  materials.py  modeling.py  modifiers.py  noise.py  polyhaven.py  render.py  scene.py  shader_nodes.py  sketchfab.py  text.py  transforms.py  uv.py
