[build-system]
requires = ["setuptools>=68.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "blender-mcp"
version = "0.1.0"
description = "MCP server for Blender - allows AI assistants to control Blender"
readme = "README.md"
license = {text = "MIT"}
requires-python = ">=3.10"
dependencies = [
    "mcp>=1.0.0",
    "httpx>=0.27.0",
    "numpy>=1.24.0",
]

[project.scripts]
blender-mcp = "blender_mcp.server:main"

[tool.setuptools.packages.find]
where = ["src"]
